# runtrail

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  install.sh  release-please-config.json
.github/workflows/: build-binaries.yml  ci.yml  release-please.yml
docs/: mvp-spec.md  schema-v1.md
examples/: agent-session.jsonl  browser-qa.jsonl  ci-failure.jsonl  command-failure.jsonl  repair-handoff.jsonl
src/: ci_capture.rs  cli.rs  command_run.rs  event.rs  index.rs  main.rs  repair.rs  replay.rs
tests/: cli.rs
